--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "templateInfo": {
     "name": "default",
     "typescript": true,
-    "css": "Sass",
+    "css": "sass",
     "framework": "Vue3"
   },
   "scripts": {
@@ -28,7 +28,7 @@
     "dev:qq": "npm run build:qq -- --watch",
     "dev:jd": "npm run build:jd -- --watch",
     "dev:harmony-hybrid": "npm run build:harmony-hybrid -- --watch",
-     "api": "node scripts/generate-api.js"
+    "api": "node scripts/generate-api.js"
   },
   "browserslist": [
     "defaults and fully supports es6-module",
@@ -38,10 +38,11 @@
   "dependencies": {
     "@babel/runtime": "^7.24.4",
     "@nutui/icons-vue-taro": "^0.0.9",
-    "@nutui/nutui-taro": "^4.3.13",
+    "@nutui/nutui-taro": "^^4.0.4",
     "@tarojs/components": "4.0.7",
     "@tarojs/helper": "4.0.7",
     "@tarojs/plugin-framework-vue3": "4.0.7",
+    "@tarojs/plugin-html": "^4.0.7",
     "@tarojs/plugin-platform-alipay": "4.0.7",
     "@tarojs/plugin-platform-h5": "4.0.7",
     "@tarojs/plugin-platform-harmony-hybrid": "4.0.7",
@@ -60,6 +61,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.4",
     "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@nutui/auto-import-resolver": "^1.0.0",
     "@tarojs/cli": "4.0.7",
     "@tarojs/taro-loader": "4.0.7",
     "@tarojs/test-utils-vue3": "^0.1.1",
@@ -80,6 +82,7 @@
     "stylelint": "^16.4.0",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.4.5",
+    "unplugin-vue-components": "^0.27.4",
     "vue-loader": "^17.4.2",
     "webpack": "5.91.0"
   }
