--- a/package.json
+++ b/package.json
@@ -70,12 +70,14 @@
     "@types/webpack-env": "^1.13.6",
     "@vue/babel-plugin-jsx": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.0",
+    "@vue/eslint-config-prettier": "^10.1.0",
+    "@vue/eslint-config-typescript": "^14.1.3",
     "adm-zip": "^0.5.16",
     "babel-preset-taro": "4.0.7",
     "css-loader": "^7.1.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.15.0",
     "eslint-config-taro": "4.0.7",
-    "eslint-plugin-vue": "^9.17.0",
+    "eslint-plugin-vue": "^9.31.0",
     "postcss": "^8.4.38",
     "sass": "^1.75.0",
     "style-loader": "^3.3.4",
