--- a/package.json
+++ b/package.json
@@ -84,8 +84,10 @@
     "stylelint": "^16.4.0",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.4.5",
+    "unplugin-auto-import": "^0.18.5",
     "unplugin-vue-components": "^0.27.4",
     "vue-loader": "^17.4.2",
     "webpack": "5.91.0"
   }
+
 }
